@@ -24,11 +24,9 @@ import com.github.rvesse.airline.parser.errors.ParseException;
 import com.github.rvesse.airline.parser.resources.ResourceLocator;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
-import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.lang3.tuple.Pair;
 
 public class ParserUtil {
@@ -79,7 +77,7 @@ public class ParserUtil {
             Object injectee = bindings.get(accessor.getJavaType());
 
             if (injectee != null) {
-                accessor.addValues(commandInstance, ListUtils.unmodifiableList(Collections.singletonList(injectee)));
+                accessor.addValues(commandInstance, List.of(injectee));
             }
         }
 
